# OCCT

./: CMakeLists.txt  GEMINI.md  NURBS_BOOK.md  README.md
app/: CMakeLists.txt  main.cpp  mkBottle.cpp  task.cpp
note/: NURBS_BOOK.md  traverse.md
src/: CMakeLists.txt  OCCT_Headers.hpp  Viewer.cpp  Viewer.hpp
src/io/: CMakeLists.txt  IO.cpp  IO.hpp
src/log/: MSG.hpp
src/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
src/viewer/: CMakeLists.txt  Viewer.cpp  Viewer.hpp
